src/FinancialForce ERP Core/objects/TaxRate__c.object
<CustomObject>
    <customHelpPage>TaxRateHelp</customHelpPage>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0.000</defaultValue>
        <label>Rate</label>
        <precision>7</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>Tax Code</label>
        <referenceTo>TaxCode__c</referenceTo>
        <relationshipLabel>Tax Rates</relationshipLabel>
        <relationshipName>Tax_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniquenessConstraint__c</fullName>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Tax Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>